.docker/api-gateway/templates/krakend.gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: krakend
spec:
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway
