.docker/api-gateway/templates/krakend.dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: krakend
spec:
  host: krakend
  subsets:
    - labels:
        version: v1
        app: krakend
      name: v1
