.docker/api-gateway/templates/krakend.vr.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: krakend
spec:
  gateways:
    - krakend
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /api/third-party
      route:
        - destination:
            host: krakend
            port:
              number: 8000
    - match:
        - uri:
            prefix: /api/ThirdPartyInterface
      route:
        - destination:
            host: krakend
            port:
              number: 8000
    - match:
        - uri:
            prefix: /api/StaticParameters
      route:
        - destination:
            host: krakend
            port:
              number: 8000
        corsPolicy:
          allowOrigin:
          - "*"
          allowMethods:
          - POST
          - GET
          allowHeaders:
          - "*"
